[gd_scene load_steps=7 format=3 uid="uid://lc37n36ypg1h"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_r2xpf"]
[ext_resource type="FontFile" uid="uid://b6wqk1o0r3j7s" path="res://external/Orbitron Bold.otf" id="2_tw778"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js3ka"]
bg_color = Color(0.168627, 0.0941176, 0.227451, 0.87451)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lrs48"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjipj"]
bg_color = Color(0.6, 0.6, 0.6, 0.627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8yp8"]
bg_color = Color(0.6, 0.6, 0.6, 0.168627)

[node name="Control" type="Control"]
layout_mode = 3
anchor_top = 0.125
anchor_right = 1.0
anchor_bottom = 0.763
offset_top = 1.0
offset_bottom = 74.96
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2xpf")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_top = -136.0
offset_right = 1920.0
offset_bottom = 944.0
theme_override_styles/panel = SubResource("StyleBoxFlat_js3ka")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -411.5
offset_right = 411.5
offset_bottom = 120.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 120
text = "VETHERION"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -445.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13

[node name="RESUME" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_o8yp8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "RESUME"

[node name="NEW_GAME" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_o8yp8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "NEW GAME"

[node name="LOAD SAVE" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "LOAD SAVE"

[node name="SETTINGS" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "SETTINGS"

[node name="CREDITS" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "CREDITS"

[node name="EXIT" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_tw778")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/hover = SubResource("StyleBoxFlat_yjipj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lrs48")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjipj")
text = "EXIT"

[node name="version" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "v0.1"

[node name="Godot_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Made with Godot Engine"

[connection signal="pressed" from="VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/NEW_GAME" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/LOAD SAVE" to="." method="_on_load_save_pressed"]
[connection signal="pressed" from="VBoxContainer/SETTINGS" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/CREDITS" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/EXIT" to="." method="_on_exit_pressed"]
